Final modifications for class.

--- a/2-pandas.ipynb
+++ b/2-pandas.ipynb
@@ -99,7 +99,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Note: The file path above should work within the FH network. If you are not at the FH, then you can download this data at* <https://s3.amazonaws.com/pronto-data/open_data_year_one.zip>"
+    "* *Note 1: The file path above should work within the FH network. If you are not at the FH, then you can download this data at* <https://s3.amazonaws.com/pronto-data/open_data_year_one.zip>\n",
+    "* *Note 2: strings in Python can be defined either with double quotes or single quotes*"
    ]
   },
   {
@@ -621,11 +622,7 @@
     "\n",
     "The default formatting is not very nice; I often make use of the [Seaborn](http://stanford.edu/~mwaskom/software/seaborn/) library for better plotting defaults.\n",
     "\n",
-    "First you'll have to\n",
-    "```\n",
-    "$ conda install seaborn\n",
-    "```\n",
-    "and then you can do this:"
+    "This is already installed on the Fred Hutch Jupyterhub, but if you are running your own Jupyter server you will need to install it separately."
    ]
   },
   {
@@ -769,7 +766,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Repeat the above three steps, counting the number of rides by time of day rather thatn by month."
+    "4. Repeat the above three steps, counting the number of rides by time of day rather than by month."
    ]
   },
   {
@@ -805,25 +802,11 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Looking Forward to Homework"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the homework this week, you will have a chance to apply some of these patterns to a brand new (but closely related) dataset."
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IPython (Python 3)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -837,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
